src/Parsers/FirstOrderLogic/FirstOrderLogicParser.jj
options
{
  static = true;
  FORCE_LA_CHECK=true;
}

PARSER_BEGIN(FirstOrderLogicParser)
package Parsers.FirstOrderLogic;

import java.io.StringReader;

public class FirstOrderLogicParser
{
  public static FirstOrderLogicParser parser;
  public static String parse(StringReader stringReader) throws ParseException
  {
    if(parser==null)
    {
      parser=new FirstOrderLogicParser(stringReader);
    }
    else
    {
      ReInit(stringReader);
    }
      try
      {
        if (FirstOrderLogicParser.one_line()==0)
        {
          return "OK";
        }
      }
      catch (Exception e)
      {
        return "NOK."+"\n"+e.getMessage();
      }
      catch (Error e)
      {
        return "Ooops."+"\n"+e.getMessage();
      }
  		return "Nope";
    }

    public static String parseFunction(StringReader stringReader) throws ParseException
  {
    if(parser==null)
    {
      parser=new FirstOrderLogicParser(stringReader);
    }
    else
    {
      ReInit(stringReader);
    }
      try
      {
        if (FirstOrderLogicParser.func()==0)
        {
          return "OK";
        }
      }
      catch (Exception e)
      {
        return "NOK."+"\n"+e.getMessage();
      }
      catch (Error e)
      {
        return "Ooops."+"\n"+e.getMessage();
      }
  		return "Nope";
    }
  }

PARSER_END(FirstOrderLogicParser)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS */
{
  < NEGATION:"!" >
| < CONJUNCTION : "/\\" >
| < DISJUNCTION : "\\/" >
| < IMPLICATION : "->" >
| < REVERSE_IMPLICATION : "<-" >
| < DOUBLE_IMPLICATION:"<->" >
| < EXISTENTIAL_CUANTIFIER: "E"< NAME >"." >
| < UNIVERSAL_CUANTIFIER: "V"< NAME >"." >
}

TOKEN :
{
  < NAME : ["a"-"z"](["a"-"z","A"-"Z"])* >
|
< FUNCTIONNAME:["A"-"Z"](["a"-"z","A"-"Z"])* >
}

int one_line() :
{}
{
  (binary()) 
  {
    return 0;
  }

}

int func() :
{}
{
  (function()) 
  {
    return 0;
  }

}

void binary() :
{}
{
  unary()
  (
    (
  	 < CONJUNCTION >
    | < DISJUNCTION >
    | < IMPLICATION >
    | < REVERSE_IMPLICATION >
    | < DOUBLE_IMPLICATION >
    )
    unary()
  )*
}

void unary() :
{}
{
    ((      (< NEGATION >|< UNIVERSAL_CUANTIFIER >|< EXISTENTIAL_CUANTIFIER >)+ formula())  | formula())
}

void formula() :
{}
{
 (   function()| "(" binary() ")")
}

void function():
{}
{
 ( < FUNCTIONNAME >"("(parameters())?")")
}
void parameters():
{}
{
(  (param()(","param())*)
  )
}
void param():
{}
{
  < NAME > |function()
}
